(rule (target "nested_structs.err.oracle") (mode fallback) (action (write-file "nested_structs.err.oracle" "")))
(rule (target "nested_structs.res.oracle") (mode fallback) (action (write-file "nested_structs.res.oracle" "")))
(rule (target "nested_structs.out.c") (mode fallback) (action (write-file "nested_structs.out.c" "")))
(rule (target "saida_harness_nested_structs.c") (mode fallback) (action (write-file "saida_harness_nested_structs.c" "")))
(rule (target "model_var_in_return.err.oracle") (mode fallback) (action (write-file "model_var_in_return.err.oracle" "")))
(rule (target "model_var_in_return.res.oracle") (mode fallback) (action (write-file "model_var_in_return.res.oracle" "")))
(rule (target "model_var_in_return.out.c") (mode fallback) (action (write-file "model_var_in_return.out.c" "")))
(rule (target "saida_harness_model_var_in_return.c") (mode fallback) (action (write-file "saida_harness_model_var_in_return.c" "")))
(rule (target "model_var_in_nested_structs.err.oracle") (mode fallback) (action (write-file "model_var_in_nested_structs.err.oracle" "")))
(rule (target "model_var_in_nested_structs.res.oracle") (mode fallback) (action (write-file "model_var_in_nested_structs.res.oracle" "")))
(rule (target "model_var_in_nested_structs.out.c") (mode fallback) (action (write-file "model_var_in_nested_structs.out.c" "")))
(rule (target "saida_harness_model_var_in_nested_structs.c") (mode fallback) (action (write-file "saida_harness_model_var_in_nested_structs.c" "")))
(rule (target "model_var_in_nested_return.err.oracle") (mode fallback) (action (write-file "model_var_in_nested_return.err.oracle" "")))
(rule (target "model_var_in_nested_return.res.oracle") (mode fallback) (action (write-file "model_var_in_nested_return.res.oracle" "")))
(rule (target "model_var_in_nested_return.out.c") (mode fallback) (action (write-file "model_var_in_nested_return.out.c" "")))
(rule (target "saida_harness_model_var_in_nested_return.c") (mode fallback) (action (write-file "saida_harness_model_var_in_nested_return.c" "")))
(rule (target "model_var_in_struct.err.oracle") (mode fallback) (action (write-file "model_var_in_struct.err.oracle" "")))
(rule (target "model_var_in_struct.res.oracle") (mode fallback) (action (write-file "model_var_in_struct.res.oracle" "")))
(rule (target "model_var_in_struct.out.c") (mode fallback) (action (write-file "model_var_in_struct.out.c" "")))
(rule (target "saida_harness_model_var_in_struct.c") (mode fallback) (action (write-file "saida_harness_model_var_in_struct.c" "")))
(rule (target "mixed_member_ptr.err.oracle") (mode fallback) (action (write-file "mixed_member_ptr.err.oracle" "")))
(rule (target "mixed_member_ptr.res.oracle") (mode fallback) (action (write-file "mixed_member_ptr.res.oracle" "")))
(rule (target "mixed_member_ptr.out.c") (mode fallback) (action (write-file "mixed_member_ptr.out.c" "")))
(rule (target "saida_harness_mixed_member_ptr.c") (mode fallback) (action (write-file "saida_harness_mixed_member_ptr.c" "")))
(rule (target "nested_struct_ptrs.err.oracle") (mode fallback) (action (write-file "nested_struct_ptrs.err.oracle" "")))
(rule (target "nested_struct_ptrs.res.oracle") (mode fallback) (action (write-file "nested_struct_ptrs.res.oracle" "")))
(rule (target "nested_struct_ptrs.out.c") (mode fallback) (action (write-file "nested_struct_ptrs.out.c" "")))
(rule (target "saida_harness_nested_struct_ptrs.c") (mode fallback) (action (write-file "saida_harness_nested_struct_ptrs.c" "")))

